--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="navbar-brand" href="/">Rails 104</a>
+      <a class="navbar-brand" href="/">Rails 104</a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul>
+      <ul class="nav navbar-nav navbar-right">
         <li><%= link_to("登入",'#') %></li>
       </ul>
     </div>
